--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.46.0
-pandas==2.2.2
-numpy==2.0.2
+streamlit==1.32.2
+pandas==2.1.4
+numpy==1.26.4
 nltk==3.9.1
-tensorflow>=2.19.0
-sklearn-pandas==2.2.0
-sklearn-compat==0.1.3
-pyngrok==7.2.11
+tensorflow==2.17.1
+scikit-learn==1.3.2
